--- a/beobgrp_site/templates/base.html
+++ b/beobgrp_site/templates/base.html
@@ -1,77 +1,62 @@
 {% load static wagtailcore_tags navigation_tags wagtailuserbar %}
 {% load compress %}
-
 <!DOCTYPE html>
 <html lang="en" class="theme-dark">
     <head>
         <title>{{ page.title }}</title>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        {% if page.search_description %}
-        <meta name="description" content="{{ page.search_description }}" />
-        {% endif %}
-
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        {% if page.search_description %}<meta name="description" content="{{ page.search_description }}" />{% endif %}
         {# Force all links in the live preview panel to be opened in a new tab #}
-        {% if request.in_preview_panel %}
-        <base target="_blank">
-        {% endif %}
-
+        {% if request.in_preview_panel %}<base target="_blank">{% endif %}
         {# Global stylesheets #}
         {% compress css %}
-        <link rel="stylesheet" type="text/x-scss" href="{% static 'css/beobgrp_site.scss' %}"/>
-
-        {% block extra_css %}
-        {# Override this in templates to add extra stylesheets #}
-        {% endblock %}
+            <link rel="stylesheet"
+                  type="text/x-scss"
+                  href="{% static 'css/beobgrp_site.scss' %}" />
+            {% block extra_css %}{# Override this in templates to add extra stylesheets #}{% endblock %}
         {% endcompress %}
-
-
     </head>
-
     <body class="{% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
-
         <header>
             {% get_site_root as site_root %}
-        
             <nav class="navbar" role="navigation" aria-label="main navigation">
-                <div class="navbar-inner-wrapper container">
-                    <div class="navbar-brand">
-                        <a class="navbar-logo" href="{% pageurl site_root %}">
-                            <img class="image" src="{% static 'images/logo-beobachtergruppe.jpg' %}" alt="Logo">
-                        </a>
-                    </div>
-
+                <div class="navbar-brand">
+                    <a class="navbar-item navbar-logo" href="{% pageurl site_root %}">
+                        <img class="image" width="100%" height="100%"
+                             src="{% static 'images/logo-beobachtergruppe.jpg' %}"
+                             alt="Logo" />
+                    </a>
                     <!-- Bulma's navbar-burger toggle -->
-                    <a role="button" class="navbar-burger is-info" aria-label="menu" aria-expanded="false" data-target="navMenu">
+                    <a role="button"
+                       class="navbar-burger is-info"
+                       aria-label="menu"
+                       aria-expanded="false"
+                       data-target="navMenu">
                         <span aria-hidden="true"></span>
                         <span aria-hidden="true"></span>
                         <span aria-hidden="true"></span>
                         <span aria-hidden="true"></span>
                     </a>
-
-                    <!-- Navbar menu (hidden on mobile by default) -->
-                    <div id="navMenu" class="navbar-menu">
-                        <div class="navbar-start">
-                            <a class="navbar-item" href="{% pageurl site_root %}">Home</a>
-                            {% for menuitem in site_root.get_children.live.in_menu %}
-                                <a class="navbar-item" href="{% pageurl menuitem %}">{{ menuitem.title }}</a>
-                            {% endfor %}
-                        </div>
-                    </div>                
-
- 
+                </div>
+                <!-- Navbar menu (hidden on mobile by default) -->
+                <div id="navMenu" class="navbar-menu">
+                    <div class="navbar-start">
+                        <a class="navbar-item" href="{% pageurl site_root %}">Home</a>
+                        {% for menuitem in site_root.get_children.live.in_menu %}
+                            <a class="navbar-item" href="{% pageurl menuitem %}">{{ menuitem.title }}</a>
+                        {% endfor %}
+                    </div>
                 </div>
             </nav>
         </header>
-                
         {# Main Layout #}
         <div class="container mt-3 is-fluid">
             <div class="columns">
                 <aside class="aside-column is-one-fifth">
                     {% block sidebar %}{% endblock %}
                 </aside>
-
                 <main id="main-content" class="content-column">
                     <div id="content">
                         {% block content %}{% endblock %}
@@ -79,13 +64,8 @@
                 </main>
             </div>
         </div>
-
-
         {# Global javascript #}
         <script type="text/javascript" src="{% static 'js/beobgrp_site.js' %}"></script>
-
-        {% block extra_js %}
-        {# Override this in templates to add extra javascript #}
-        {% endblock %}
+        {% block extra_js %}{# Override this in templates to add extra javascript #}{% endblock %}
     </body>
 </html>
