--- a/beobgrp_site/static/css/beobgrp_site.scss
+++ b/beobgrp_site/static/css/beobgrp_site.scss
@@ -75,6 +75,13 @@ h5 {
   color: gold;
 }
 
+.eventbox {
+  @extend .box;
+  background-color: $content-background-color;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem; // Add some space between event boxes
+}
 
 .navbar {
   min-height: 5rem; // Increase navbar height for larger logo
@@ -133,6 +140,7 @@ h5 {
       &.is-active {
         display: flex !important;
         flex-direction: column;
+        justify-content: flex-end;
         width: 100%;
         padding: 1rem;
       }
@@ -267,6 +275,16 @@ h5 {
 p {
   margin-top: 0.3rem;
   margin-bottom: 0.3rem;
+}
+
+a {
+  color: $link;
+  font-style: bold;
+
+  &:hover {
+    color: lighten($link, 10%);
+    text-decoration: underline;
+  }
 }
 
 .content-column {
