--- a/beobgrp_site/templates/base.html
+++ b/beobgrp_site/templates/base.html
@@ -55,7 +55,7 @@
         <div class="container mt-3 is-fluid">
             <div class="columns">
                 <aside class="aside-column is-one-fifth">
-                    {% for event in all_events %}
+                    {% for event in upcoming_events %}
                         {% include "includes/side_info.html" %}
                     {% endfor %}
                     {% block sidebar %}{% endblock %}
