--- a/beobgrp_site/templates/includes/side_info.html
+++ b/beobgrp_site/templates/includes/side_info.html
@@ -1,6 +1,6 @@
 <div class="eventbox">
     <p>
-        Nächster {{ event.event_type }}: <a href="{{ event.get_parent.get_url }}">{{ event.event_title }}</a> am
-        {{ event.start_time|date:"D" }} um {{ event.start_time|date:"d.m, H:i" }} Uhr
+        Nächster {{ event.event_type }}: <b><a href="{{ event.get_parent.get_url }}">{{ event.event_title }}</a></b> am
+        <b>{{ event.start_time|date:"D" }} {{ event.start_time|date:"d.m, H:i" }} Uhr</b>
     </p>
 </div>
