Improve sidebar info

--- a/beobgrp_site/templates/base.html
+++ b/beobgrp_site/templates/base.html
@@ -55,6 +55,7 @@
         <div class="container mt-3 is-fluid">
             <div class="columns">
                 <aside class="aside-column is-one-fifth">
+                    <h4>Aktuelles:</h4>
                     {% for event in upcoming_events %}
                         {% include "includes/side_info.html" %}
                     {% endfor %}
