--- a/beobgrp_site/templates/includes/side_info.html
+++ b/beobgrp_site/templates/includes/side_info.html
@@ -1,6 +1,13 @@
-<div class="eventbox">
+<div class="eventbox {{ event.warning_class }}">
     <p>
+        {% if event.status %}
+            <b>{{ event.status|upper }}!:</b>
+            <div class="strikethrough">
+        {% endif %}
         {{ event.event_type }}: <b><a href="{{ event.get_parent.get_url }}">{{ event.event_title }}</a></b> am
         <b>{{ event.start_time|date:"D" }} {{ event.start_time|date:"d.m, H:i" }} Uhr</b>
+        {% if event.status %}
+            </div>
+        {% endif %}
     </p>
 </div>
