Make header background darker

--- a/beobgrp_site/static/css/beobgrp_site.scss
+++ b/beobgrp_site/static/css/beobgrp_site.scss
@@ -8,7 +8,7 @@ $background: black;
 // other colors
 $content-background-color: #0d3ca2;
 $aside-background-color: #0c358e;
-$header-background-color: #4490ac;
+$header-background-color: #145a74;
 
 // Navbar
 $navbar-background-color: #333;
