Fix image text layout in events

--- a/home/templates/blocks/event_list_block.html
+++ b/home/templates/blocks/event_list_block.html
@@ -16,7 +16,7 @@
                     }
                     
                 </style>  
-                <div class="column is-full is-half-fullhd">
+                <div class="column is-multiline is-full">
                     <div class="card">
                         <div class="card-header columns {{ event.warning_class }}">
                             {% if event.status %}
@@ -25,8 +25,8 @@
                             <span class="column is-text-col">{{ event.event_type }}</span>
                         </div>
                         <div class="card-content">
-                            <div class="columns is-multiline">                
-                                <div class="column is-half is-text-col {{ event.status|yesno:"strikethrough," }}">
+                            <div class="columns">                
+                                <div class="column is-half is-text-col {{ event.cancelled|yesno:"strikethrough," }}">
                                     <p class="card-title">{{ event.start_time|date:"D" }} 
                                         {{ event.start_time|date:"d.m, H:i" }} Uhr</p>
                                     <p class="card-subtitle"><b>{{ event.event_title }}</b><br>{{ event.referent }}</p>
@@ -37,8 +37,8 @@
                                     </div>
                                 {% endif %}
                             </div>                        
-                            <input type="checkbox" id="toggle-info-{{ event.web_id }}" class="toggle-checkbox-{{ event.web_id }}">
                             <label for="toggle-info-{{ event.web_id }}" class="btn btn-info">Info</label>
+                            <input type="checkbox" id="toggle-info-{{ event.web_id }}" class="toggle-checkbox-{{ event.web_id }}">
                             {% if event.status %}
                                 <b>{{ event.status|upper }}!</b>
                             {% elif event.needs_reservation %}
