--- a/home/templates/home/event_page.html
+++ b/home/templates/home/event_page.html
@@ -6,9 +6,15 @@
 
 
 {% block extra_css %}
-  {% compress css %}
-    <link rel="stylesheet" type="text/x-scss" href="{% static 'css/event_info.scss' %}"/>
-  {% endcompress %}
+  {% if debug %}
+    {% compress css %}
+      <link rel="stylesheet" type="text/x-scss" href="{% static 'css/event_info.scss' %}"/>
+    {% endcompress %}
+  {% else %}
+    {% compress css %}
+      <link rel="stylesheet" type="text/x-scss" href="/static/css/event_info.scss"/>
+    {% endcompress %}
+  {% endif %}
 {% endblock extra_css %}
 
 {% event_checkbox_style test }
