--- a/beobgrp_site/static/css/beobgrp_site.scss
+++ b/beobgrp_site/static/css/beobgrp_site.scss
@@ -409,11 +409,14 @@ $title-bottom-padding: 0.2em;
   }
 
   .image-caption {
-    padding: 0.5rem;
+    padding: 1rem;
     font-style: italic;
     color: $text;
     font-size: 0.9em;
     line-height: 1.4;
+    display: flex;
+    align-items: center;
+    min-height: 100%;
     
     // Use a slightly muted version of the text color
     opacity: 0.9;
@@ -425,6 +428,8 @@ $title-bottom-padding: 0.2em;
     margin-bottom: 0.75rem;
     padding-bottom: 0.5rem;
     border-bottom: 1px solid rgba($text, 0.2);
+    display: block;
+    min-height: auto;
   }
 
   // Bottom caption positioning
@@ -433,63 +438,36 @@ $title-bottom-padding: 0.2em;
     margin-top: 0.75rem;
     padding-top: 0.5rem;
     border-top: 1px solid rgba($text, 0.2);
+    display: block;
+    min-height: auto;
   }
 
-  // Side captions using Bulma's flex utilities
-  .image-container.is-flex {
-    @extend .is-flex;
-    @extend .is-align-items-center;
-    gap: 1.5rem;
+  // Side captions using Bulma columns (2/3 caption, 1/3 image)
+  .caption-left {
+    text-align: right;
+    padding-right: 1rem;
+    border-right: 1px solid rgba($text, 0.2);
+  }
 
-    .caption-left {
-      flex: 0 0 200px;
-      text-align: right;
-      padding-right: 1rem;
-      border-right: 1px solid rgba($text, 0.2);
-    }
+  .caption-right {
+    text-align: left;
+    padding-left: 1rem;
+    border-left: 1px solid rgba($text, 0.2);
+  }
 
-    .caption-right {
-      flex: 0 0 200px;
-      text-align: left;
-      padding-left: 1rem;
-      border-left: 1px solid rgba($text, 0.2);
-    }
-
-    .image-wrapper {
-      flex: 1;
-      text-align: center;
+  // Ensure images in columns scale properly
+  .columns.is-gapless .column {
+    padding: 0;
+    
+    .image-responsive {
+      width: 100%;
+      object-fit: cover;
     }
   }
 
-  // Responsive adjustments using Bulma breakpoints
-  @media screen and (max-width: 768px) {
-    .image-container.is-flex {
-      flex-direction: column;
-      gap: 1rem;
-      
-      .caption-left,
-      .caption-right {
-        flex: none;
-        text-align: center;
-        padding: 0.5rem 0;
-        border: none;
-        border-top: 1px solid rgba($text, 0.2);
-        border-bottom: 1px solid rgba($text, 0.2);
-      }
-      
-      // Reorder for mobile: left caption goes to top, right caption to bottom
-      .caption-left {
-        order: 1;
-      }
-      
-      .image-wrapper {
-        order: 2;
-      }
-      
-      .caption-right {
-        order: 3;
-      }
-    }
+  // Simple wrapper for non-columned images (top/bottom captions)
+  .image-wrapper {
+    text-align: center;
   }
 
   // Link styling that matches your existing link colors
