--- a/beobgrp_site/static/css/beobgrp_site.scss
+++ b/beobgrp_site/static/css/beobgrp_site.scss
@@ -459,9 +459,12 @@ $title-bottom-padding: 0.2em;
   .columns.is-gapless .column {
     padding: 0;
     
-    .image-responsive {
+    // Images should fill their container completely
+    .is-fullwidth {
       width: 100%;
+      height: 100%;
       object-fit: cover;
+      display: block;
     }
   }
 
