--- a/home/templates/blocks/image_with_caption.html
+++ b/home/templates/blocks/image_with_caption.html
@@ -14,24 +14,24 @@
     {% if value.caption_position == 'left' or value.caption_position == 'right' %}
         <div class="columns is-mobile is-gapless">
             {% if value.caption_position == 'left' and value.caption %}
-                <div class="column is-two-thirds">
+                <div class="column is-two-thirds-mobile is-three-quarters-tablet is-seven-eighths-desktop">
                     <div class="image-caption caption-left">
                         {{ value.caption }}
                     </div>
                 </div>
-                <div class="column is-one-third">
+                <div class="column is-one-third-mobile is-one-quarter-tablet is-one-eighth-desktop">
                     {% if value.image %}
-                        {% image value.image width-400 alt=value.caption|default:value.image.title class="image-responsive" %}
+                        {% image value.image original alt=value.caption|default:value.image.title class="is-fullwidth" %}
                     {% endif %}
                 </div>
             {% else %}
-                <div class="column is-one-third">
+                <div class="column is-one-third-mobile is-one-quarter-tablet is-one-eighth-desktop">
                     {% if value.image %}
-                        {% image value.image width-400 alt=value.caption|default:value.image.title class="image-responsive" %}
+                        {% image value.image original alt=value.caption|default:value.image.title class="is-fullwidth" %}
                     {% endif %}
                 </div>
                 {% if value.caption_position == 'right' and value.caption %}
-                    <div class="column is-two-thirds">
+                    <div class="column is-two-thirds-mobile is-three-quarters-tablet is-seven-eighths-desktop">
                         <div class="image-caption caption-right">
                             {{ value.caption }}
                         </div>
@@ -42,7 +42,7 @@
     {% else %}
         <div class="image-wrapper">
             {% if value.image %}
-                {% image value.image width-800 alt=value.caption|default:value.image.title class="image-responsive" %}
+                {% image value.image original alt=value.caption|default:value.image.title class="is-fullwidth" %}
             {% endif %}
         </div>
     {% endif %}
