--- a/home/templates/blocks/image_with_caption.html
+++ b/home/templates/blocks/image_with_caption.html
@@ -1,4 +1,5 @@
 {% load wagtailimages_tags %}
+{% load wagtailcore_tags %}
 
 <div class="block-image-with-caption image-caption-{{ value.caption_position }}">
     {% if value.link.link_type != 'none' %}
@@ -11,7 +12,7 @@
     
     {% if value.caption_position == 'top' and value.caption %}
         <div class="image-caption caption-top">
-            {{ value.caption }}
+            {% include_block value.caption %}
         </div>
     {% endif %}
     
@@ -20,24 +21,24 @@
             {% if value.caption_position == 'left' and value.caption %}
                 <div class="column is-two-thirds-mobile is-three-quarters-tablet is-seven-eighths-desktop">
                     <div class="image-caption caption-left">
-                        {{ value.caption }}
+                        {% include_block value.caption %}
                     </div>
                 </div>
                 <div class="column is-one-third-mobile is-one-quarter-tablet is-one-eighth-desktop">
                     {% if value.image %}
-                        {% image value.image original alt=value.caption|default:value.image.title class="is-fullwidth" %}
+                        {% image value.image original alt=value.image.title class="is-fullwidth" %}
                     {% endif %}
                 </div>
             {% else %}
                 <div class="column is-one-third-mobile is-one-quarter-tablet is-one-eighth-desktop">
                     {% if value.image %}
-                        {% image value.image original alt=value.caption|default:value.image.title class="is-fullwidth" %}
+                        {% image value.image original alt=value.image.title class="is-fullwidth" %}
                     {% endif %}
                 </div>
                 {% if value.caption_position == 'right' and value.caption %}
                     <div class="column is-two-thirds-mobile is-three-quarters-tablet is-seven-eighths-desktop">
                         <div class="image-caption caption-right">
-                            {{ value.caption }}
+                            {% include_block value.caption %}
                         </div>
                     </div>
                 {% endif %}
@@ -46,14 +47,14 @@
     {% else %}
         <div class="image-wrapper">
             {% if value.image %}
-                {% image value.image original alt=value.caption|default:value.image.title class="is-fullwidth" %}
+                {% image value.image original alt=value.image.title class="is-fullwidth" %}
             {% endif %}
         </div>
     {% endif %}
     
     {% if value.caption_position == 'bottom' and value.caption %}
         <div class="image-caption caption-bottom">
-            {{ value.caption }}
+            {% include_block value.caption %}
         </div>
     {% endif %}
     
